--- a/public/css/style.css
+++ b/public/css/style.css
@@ -697,7 +697,7 @@ img {
   width: 154px;
 }
 #footer div .connect a {
-  background: url(../images/icons.png) no-repeat;
+  /*background: url(../images/icons.png) no-repeat;*/
   display: block;
   float: left;
   height: 28px;
