--- a/public/css/style.css
+++ b/public/css/style.css
@@ -501,6 +501,8 @@ img {
 }
 
 #body.contact div h2 {
+  color: white;
+  text-align: center;
   font-weight: bold;
   margin: 0 auto 18px;
   text-transform: uppercase;
