--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -67,7 +67,7 @@ img {
 #header div#navigation ul li a {
   color: #000000;
   display: block;
-  font-family: Arial;
+  font-family: courier;
   font-size: 1.125em;
   font-weight: normal;
   height: 3em;
