change font style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,7 +68,7 @@ img {
 }
 #header div ul li a {
   color: #000000;
-  font-family: "Arial Black";
+  font-family: "Courier";
   font-size: 14px;
   font-weight: normal;
   line-height: 14px;
