--- a/public/css/body/home.css
+++ b/public/css/body/home.css
@@ -1,4 +1,4 @@
-#body.home div {
+/* #body.home div {
   background: none;
   margin: 0;
   max-width: none;
@@ -141,4 +141,4 @@
 #body.home div.body div a.more:hover {
   background-color: #ffffff;
   color: rgb(245,218,41);
-}
+} */
