--- a/public/css/body/polo.css
+++ b/public/css/body/polo.css
@@ -1,4 +1,4 @@
-#body.polo div {
+/* #body.polo div {
   padding: 58px 0 161px;
 }
 
@@ -20,4 +20,4 @@
 
 #body.polo div p {
   margin: 0 auto 48px;
-}
+} */
