--- a/public/css/body/bodystyle.css
+++ b/public/css/body/bodystyle.css
@@ -1,229 +1,11 @@
 
 /*----------------------------------------body-home-styles---------------------------------------*/
-body.container {
-  background: linear-gradient(130deg, #FFFEFF, #7DE2FC);
+a{
+  text-decoration: none;
 }
-
-/*----------------------------------------body-styles---------------------------------------*/
-
-body h1 {
-  /*background: url(../images/bg-border2.gif) no-repeat center bottom;*/
-  color: rgb(245,218,41);
-  font-family: 'Arial Black';
-  font-size: 40px;
-  font-weight: normal;
-  line-height: 40px;
-  margin: 0;
-  padding: 0 0 20px;
-  text-align: center;
-  text-transform: uppercase;
+li{
+  list-style:none;
 }
-body img {
-  display: block;
-  margin: 68px auto 47px;
-  padding: 0;
-  width: auto;
-}
-
-body p {
-  color: #FFFFFF;
-  display: block;
-  font-family: Arial;
-  font-size: 16px;
-  font-weight: normal;
-  letter-spacing: 0.01em;
-  margin: 0 auto 37px;
-  padding: 0;
-  text-align: center;
-  width: 765px;
-}
-/*body p span {
-  color: #FFFFFF;
-  display: block;
-  font-family: Arial;
-  font-size: 16px;
-  font-style: italic;
-  font-weight: normal;
-  letter-spacing: 0.03em;
-  line-height: 48px;
-  padding: 39px 0;
-}
-body p span a {
-  color: #FFFFFF;
-  font-family: Arial;
-  font-size: 16px;
-  font-style: italic;
-  font-weight: bold;
-  line-height: 48px;
-}
-body p {
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 16px;
-  font-weight: normal;
-  line-height: 48px;
-  margin: 0;
-  padding: 0;
-  text-decoration: underline;
-}
-body p a:hover {
-  color: rgb(245,218,41);
-}
-body h2 {
-  color: #FFFFFF;
-  font-family: arial;
-  font-size: 20px;
-  font-weight: normal;
-  line-height: 20px;
-  margin: 0 0 15px;
-  padding: 0;
-  text-align: center;
-  text-transform: none;
-}
-body ul.gallery {
-  display: inline-block;
-  list-style: none outside none;
-  margin: 0 0 76px;
-  max-width: none;
-  padding: 72px 0 0;
-  width: 100%;
-}
-body ul.gallery li {
-  border: none;
-  float: left;
-  margin: 0 10px;
-  padding: 0;
-  width: 300px;
-}
-body ul.gallery li a {
-  display: block;
-  margin: 0;
-  padding: 0;
-  width: auto;
-}
-body ul.gallery li a img {
-  display: block;
-  float: none;
-  margin: 0 auto;
-  padding: 0;
-  height: 100%;
-  width: auto;
-}
-body h3 {
-  background: url(../images/bg-border1.gif) no-repeat center top;
-  color: #FFFFFF;
-  display: block;
-  font-family: Arial;
-  font-size: 25px;
-  font-weight: bold;
-  letter-spacing: 0.02em;
-  line-height: 48px;
-  margin: 0 auto 15px;
-  padding: 18px 0 0;
-  text-align: center;
-  width: 611px;
-}
-body h3 span {
-  background: url(../images/bg-border1.gif) no-repeat center bottom;
-  display: block;
-  margin: 0;
-  padding: 0 0 11px;
-  width: auto;
-}
-
-body ul {
-  display: inline-block;
-  list-style: none outside none;
-  margin: 0;
-  max-width: 780px;
-  padding: 72px 90px 49px;
-}
-body ul li:first-child {
-  border: none;
-  padding: 0 0 0 0;
-}
-body ul li {
-  border-top: 2px solid #363636;
-  display: block;
-  margin: 0;
-  overflow: hidden;
-  padding: 40px 0 0;
-  width: auto;
-}
-body ul li img {
-  display: block;
-  float: left;
-  margin: 0 28px 0 0;
-  padding: 0;
-  width: auto;
-}
-body ul li div {
-  background: none;
-  float: left;
-  margin: 0;
-  max-width: none;
-  overflow: hidden;
-  padding: 6px 0 0;
-  width: 522px;
-}
-body ul li div h1 {
-  background: none;
-  color: #FFFFFF;
-  font-family: Arial;
-  font-size: 25px;
-  font-weight: normal;
-  line-height: 30px;
-  margin: 0 0 16px;
-  padding: 0;
-  text-align: left;
-  text-transform: uppercase;
-  width: auto;
-}
-body ul li div p {
-  color: #FFFFFF;
-  font-family: Arial;
-  font-size: 16px;
-  font-weight: normal;
-  letter-spacing: 0.01em;
-  line-height: 48px;
-  margin: 0 0 6px;
-  padding: 0;
-  text-align: left;
-  width: auto;
-}
-body ul li div p a {
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 16px;
-  font-weight: normal;
-  line-height: 48px;
-  margin: 0;
-  padding: 0;
-  text-decoration: underline;
-}
-body ul li div p a:hover {
-  color: rgb(245,218,41);
-}
-body ul li div a.more {
-  border: 2px solid #FFFFFF;
-  color: #FFFFFF;
-  display: block;
-  float: left;
-  font-family: Arial;
-  font-size: 14px;
-  font-weight: normal;
-  height: 34px;
-  line-height: 34px;
-  margin: 0 0 40px;
-  padding: 0;
-  text-align: center;
-  text-transform: uppercase;
-  width: 136px;
-}
-body ul li div a.more:hover {
-  background-color: rgb(245,218,41);
-  border: none;
-  height: 38px;
-  line-height: 38px;
-  width: 140px;
+body.encloser {
+  background: linear-gradient(220deg, #dfe9f3 0%, white 100%);
 }
