--- a/public/css/body/footer.css
+++ b/public/css/body/footer.css
@@ -1,32 +1,33 @@
 /* Website template by freewebsitetemplates.com */
-
-a {
-  text-decoration: none;
-  outline: none;
-  cursor: pointer;
-}
-a:active {
-  background: none;
-}
-img {
-  border: none;
+footer.container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 30 0 0 0;
+  background: linear-gradient(90deg, white 0%, #dfe9f3 100%);
+  border-radius: 8px;
+  min-height: 200px;
+  padding: 40px;
+  width: inherit;
+  font-family: 'Roboto'
 }
 
 /*----------------------------------------footer-styles---------------------------------------*/
-#footer.container {
+/* footer.container {
   margin: 30px 30px 0 30px;
   background: linear-gradient(45deg, white, #dfe9f3);
   border-radius: 15px;
   min-height: 60px;
   padding: 100px;
 }
-#footer div {
+footer div {
   margin: 0 auto;
   max-width: 940px;
   overflow: hidden;
   padding: 47px 10px 42px;
 }
-#footer div p {
+footer div p {
   color: #FFFFFF;
   float: left;
   font-family: Arial;
@@ -39,7 +40,7 @@ img {
   text-transform: none;
   width: 400px;
 }
-#footer div .connect {
+footer div .connect {
   display: block;
   float: right;
   height: 32px;
@@ -48,8 +49,9 @@ img {
   padding: 0;
   width: 154px;
 }
-#footer div .connect a {
-  /*background: url(../images/icons.png) no-repeat;*/
+footer div .connect a {
+
+background: url(../images/icons.png) no-repeat;
   display: block;
   float: left;
   height: 28px;
@@ -58,29 +60,29 @@ img {
   text-indent: -99999px;
   width: 28px;
 }
-#footer div .connect a.facebook {
+footer div .connect a.facebook {
   background-position: 0 0;
 }
-#footer div .connect a.googleplus {
+footer div .connect a.googleplus {
   background-position: 0 -30px;
 }
-#footer div .connect a.pinterest {
+footer div .connect a.pinterest {
   background-position: 0 -60px;
   margin: 0;
 }
-#footer div .connect a.twitter {
+footer div .connect a.twitter {
   background-position: 0 -90px;
 }
-#footer div .connect a.facebook:hover {
+footer div .connect a.facebook:hover {
   background-position: -30px 0;
 }
-#footer div .connect a.googleplus:hover {
+footer div .connect a.googleplus:hover {
   background-position: -30px -30px;
 }
-#footer div .connect a.pinterest:hover {
+footer div .connect a.pinterest:hover {
   background-position: -30px -60px;
 }
-#footer div .connect a.twitter:hover {
+footer div .connect a.twitter:hover {
   background-position: -30px -90px;
 }
 ul.women li {
@@ -95,4 +97,4 @@ ul.women li {
   padding: 18px 0 0;
   text-align: center;
   width: 611px;
-}
+} */
