--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1,5 +1,5 @@
 /* Website template by freewebsitetemplates.com */
-@media only screen and (min-width : 320px) and (max-width : 568px) {
+/*@media only screen and (min-width : 320px) and (max-width : 568px) {
 html {
   -webkit-text-size-adjust: none;
 }
