--- a/public/css/body/grid_img.css
+++ b/public/css/body/grid_img.css
@@ -1,3 +1,18 @@
+@media screen and (min-width: 799px) {
+a.text{
+  font-family: 'Roboto';
+  font-weight: 300;
+  font-size: 25px;
+  color: black;
+  margin: 150px 20px 150px 20px;
+  padding: 20px 35px 0px 35px;
+  background: linear-gradient(to bottom, #D5DEE7 0%, #E8EBF2 50%, #E2E7ED 100%), linear-gradient(33deg, rgba(255,255,255,0.20) 0%, rgba(0,0,0,0.20) 100%);
+}
+a.text:hover{
+  background: linear-gradient(to top, #D5DEE7 0%, #E8EBF2 50%, #E2E7ED 100%), linear-gradient(33deg, rgba(255,255,255,0.20) 0%, rgba(0,0,0,0.20) 100%);
+  color: #000000;
+}
+
 div.container-a{
   display: grid;
   background: linear-gradient(to bottom, #D5DEE7 0%, #E8EBF2 50%, #E2E7ED 100%), linear-gradient(to bottom, rgba(0,0,0,0.02) 50%, rgba(255,255,255,0.02) 61%, rgba(0,0,0,0.02) 73%), linear-gradient(33deg, rgba(255,255,255,0.20) 0%, rgba(0,0,0,0.20) 100%);
@@ -16,8 +31,37 @@ img.item{
   display: grid;
   box-shadow: 1px 1px 1px grey;
   height: auto;
-  width: 420px;
+  width: 450px;
   align-self: center;
   justify-content: start;
-  margin: 60px 20px -80px 40px;
+  margin: 100px 20px -80px 40px;
+}
+
+h1.text-item{
+  display: grid;
+  align-self: right;
+  font-family: 'Roboto';
+  font-weight: 300;
+  font-size: 25px;
+  color: #04befe;
+  margin: 60px 10px 150px 20px;
+  padding: 60px 35px 0px 35px;
+  text-align: right;
+  text-transform: uppercase;
+}
+
+p.text-item {
+  display: grid;
+  align-self: center;
+  border-radius: 5px;
+  font-size: 20px;
+  font-family: 'Roboto';
+  font-weight: lighter;
+  letter-spacing: 0.02em;
+  line-height: 30px;
+  text-align: left;
+  margin: 50px 10px 10px 10px;
+  padding: 100px 20px 20px 20px;
+  opacity: 0.6;
+}
 }
