--- a/public/css/body/grid_text.css
+++ b/public/css/body/grid_text.css
@@ -1,3 +1,5 @@
+
+/*
 div.container-b{
   display: grid;
   grid-template-columns: auto;
@@ -7,35 +9,23 @@ div.container-b{
   justify-content: start;
 }
 
-h1.text-item{
+a.text-item{
   display: grid;
   align-self: center;
-  font-family: 'Roboto';
-  font-weight: 300;
-  font-size: 25px;
-  color: #04befe;
-  margin: 10px 10px 150px 20px;
-  padding: 20px 35px 0px 35px;
-  text-align: right;
-  text-transform: uppercase;
-}
-
-p.text-item {
-  display: grid;
-  background: linear-gradient(90deg, white 0%, #dfe9f3 100%);
-  align-self: center;
-  border-radius: 5px;
   font-family: 'Roboto';
   font-size: 22px;
   font-weight: lighter;
   letter-spacing: 0.02em;
   line-height: 30px;
   text-align: left;
-  margin: 100px 20px 20px 20px;
-  padding: 100px 20px 20px 20px;
-  opacity: 0.6;
+  margin: 10px 10px 150px 20px;
+  padding: 20px 35px 0px 35px;
+  text-align: right;
+  text-transform: uppercase;
+  color: #04befe;
+
 }
-/*p span {
+p span {
   color: #FFFFFF;
   display: block;
   font-family: Arial;
