--- a/public/css/body/nav.css
+++ b/public/css/body/nav.css
@@ -1,11 +1,11 @@
-
+@media screen and (min-width: 799px) {
 /*----------------------------------------nav-styles---------------------------------------*/
-nav.container {
+.container {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
   align-items: center;
-  margin: 30 0 0 0;
+  margin: 30px 0px 0px 0px;
   background: linear-gradient(90deg, white 0%, #dfe9f3 100%);
   border-radius: 8px;
   min-height: 40px;
@@ -13,7 +13,7 @@ nav.container {
   width: inherit;
 }
 
-nav a img {
+img.logo {
   display: flex;
   float: left;
   height: 99px;
@@ -22,7 +22,7 @@ nav a img {
   align-items: flex-end;
 }
 
-nav a.item {
+a.item {
   color: #000000;
   font-family: 'Roboto';
   font-size: 20px;
@@ -31,10 +31,14 @@ nav a.item {
   letter-spacing: 0.1em;
 }
 
+a.barras {
+  display: none;
+}
+
 nav a.selected, body nav a:hover {
   color: rgb(245,218,41);
 }
-
+}
 /*
 /* Medium screens */
 /*@media all and (max-width: 800px) {
