--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1,6 +1,12 @@
 /* Website template by freewebsitetemplates.com */
 @media screen and (min-width: 300px) and (max-width: 800px) {
   a.item:not(:first-child) {display: none;}
+  a.item.expand{
+   position: absolute;
+   right: 0;
+   top: 0;
+  }
+
   a.barras {
     display: flex;
     justify-content: space-evenly;
@@ -26,14 +32,13 @@
   }
   nav.container{
     display: flex;
-    justify-content: space-evenly;    
+    justify-content: space-around;
     background: linear-gradient(90deg, white 0%, #dfe9f3 100%);
     border-radius: 8px;
     min-height: 40px;
     padding: 40px;
     width: 80%;
   }
-
 }
 @media screen and (min-width: 299px) and (max-width: 799px) {
   div.container-a {
