--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -7597,8 +7597,8 @@ a.text-dark:hover, a.text-dark:focus {
   color: white;
   padding: 3rem 0 7rem;
   position: relative;
-  background-color: #0274c0;
-  background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #003968 0%, #0000 100%);
+  background-color: #1d1d1b;
+  background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, black 0%, #0000 100%);
   background-size: cover;
   z-index: 0; }
   .masthead .shape {
@@ -7656,5 +7656,14 @@ header .overlay {
 
   header video {
     display: none; } }
+.jumbotron-home {
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  background-color: white;
+  border-radius: 0.3rem; }
+
+@media (min-width: 576px) {
+  .jumbotron {
+    padding: 4rem 2rem; } }
 
 /*# sourceMappingURL=bootstrap.css.map */
