--- a/public/scss/custom.scss
+++ b/public/scss/custom.scss
@@ -6,8 +6,8 @@ padding-bottom: 29px;
     color: white;
     padding: 3rem 0 7rem;
     position: relative;
-    background-color:rgb(2, 116, 192);
-    background-image: url(/public/images/bk-home.jpg),linear-gradient(-10deg,rgb(0, 57, 104) 0%,#0000 100%);
+    background-color: #1d1d1b;
+    background-image: url(/public/images/bk-home.jpg),linear-gradient(-10deg,rgb(0, 0, 0) 0%,#0000 100%);
     background-size: cover;
     z-index: 0;
     .shape {
@@ -75,3 +75,12 @@ padding-bottom: 29px;
     }
   }
   
+
+.jumbotron-home {
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  background-color: white;
+  border-radius: 0.3rem; }
+  @media (min-width: 576px) {
+    .jumbotron {
+      padding: 4rem 2rem; } }
