--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -6,7 +6,7 @@
   padding: 3rem 0 7rem;
   position: relative;
   background-color: #1d1d1b;
-  background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, black 0%, #0000 100%);
+  background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #979797 0%, #1c1c1c 100%);
   background-size: cover;
   z-index: 0; }
   .masthead .shape {
