--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,8 +5,8 @@
   color: white;
   padding: 3rem 0 7rem;
   position: relative;
-  background-color: #1d1d1b;
-  background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #979797 0%, #1c1c1c 100%);
+  background-color: #000000;
+  background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #2c357b 0%, #1c1c1c 100%);
   background-size: cover;
   z-index: 0; }
   .masthead .shape {
