--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -9664,7 +9664,7 @@ h3 {
   padding: 3rem 0 7rem;
   position: relative;
   background-color: #1d1d1b;
-  background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, black 0%, #0000 100%);
+  background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #272727 0%, #0000 100%);
   background-size: cover;
   z-index: 0;
 }
@@ -9743,6 +9743,9 @@ header .overlay {
   .jumbotron {
     padding: 4rem 2rem;
   }
+}
+.row {
+  margin: 15px;
 }
 
 /*# sourceMappingURL=bootstrap.css.map */
