--- a/public/scss/custom.scss
+++ b/public/scss/custom.scss
@@ -68,7 +68,7 @@ padding-bottom: 29px;
   
   @media (pointer: coarse) and (hover: none) {
     header {
-      background: url('/public/images/polo1.jpg') black no-repeat center center scroll;
+      background: url('/public/images/video_home.mp4') black no-repeat center center scroll;
     }
     header video {
       display: none;
