--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -9748,4 +9748,11 @@ header .overlay {
   margin: 15px;
 }
 
+@media (max-width: 360px) {
+  .font-weight-bold {
+    font-size: 2.5rem;
+  }
+}
+
+
 /*# sourceMappingURL=bootstrap.css.map */
