--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,6 +22,16 @@
   border-radius: 78% 22% 77% 23%/29% 66% 34% 71%;
 }
 
+.block2 {
+  color: white;
+  padding: 7rem 0 7rem;
+  position: relative;
+  background-color: #1d1d1b;
+  background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #272727 0%, #0000 100%);
+  background-size: cover;
+  z-index: 0;
+}
+
 .row {
   margin: 15px;
 }
@@ -29,6 +39,7 @@
 header {
   position: relative;
   background-color: black;
+  height: 75vh;
   min-height: 25rem;
   width: 100%;
   overflow: hidden;
@@ -108,7 +119,7 @@ header .overlay {
 .mailchimp {
   background-color: #dd3d31;
   background-size: cover;
-  background-image: url(/assets/img/overlay.svg), linear-gradient(45deg, #dd3d31 0%, #d22f23 100%);
+  background-image: url(/assets/img/overlay.svg), linear-gradient(45deg, #303030 0%, #7b797c 100%);
   color: #fff;
   padding: 5rem 0;
 }
@@ -120,6 +131,83 @@ header .overlay {
   z-index: 2;
   overflow: hidden;
   border-radius: 20px;
+}
+
+/* Anchor will cover the whole item by default */
+/* For some effects it will show as a button */
+.grid figure figcaption > a {
+  z-index: 1000;
+  text-indent: 200%;
+  white-space: nowrap;
+  font-size: 0;
+  opacity: 0;
+}
+
+.grid figure h2 {
+  word-spacing: -0.15em;
+  font-weight: 300;
+}
+
+.grid figure h2 span {
+  font-weight: 800;
+}
+
+.grid figure h2,
+.grid figure p {
+  margin: 0;
+}
+
+.grid figure p {
+  letter-spacing: 1px;
+  font-size: 68.5%;
+}
+
+/* Individual effects */
+/*---------------*/
+/***** Lily *****/
+/*---------------*/
+figure.effect-lily img {
+  margin-left: 30px;
+  max-width: none;
+  width: -webkit-calc(60% + 50px);
+  width: calc(60% + 50px);
+  padding: 10px 10px;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: scale(1.15);
+  transform: scale(1.15);
+  box-shadow: 0 29px 32px -20px rgba(0, 0, 0, 0.5);
+  border-radius: 5%;
+}
+
+figure.effect-lily:hover img,
+figure.effect-lily:hover p {
+  opacity: 1;
+}
+
+figure.effect-lily:hover img {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+figure.effect-ruby img {
+  max-width: none;
+  width: -webkit-calc(100% + 50px);
+  width: calc(100% + 50px);
+  margin-left: 30px;
+  opacity: 0.7;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: scale(1.15);
+  transform: scale(1.15);
+  box-shadow: 0 29px 32px -20px rgba(0, 0, 0, 0.5);
+  border-radius: 100%;
+}
+
+figure.effect-ruby:hover img {
+  opacity: 0.5;
+  -webkit-transform: scale(1);
+  transform: scale(1);
 }
 
 /*# sourceMappingURL=custom.css.map */
