--- a/public/scss/custom.scss
+++ b/public/scss/custom.scss
@@ -119,7 +119,8 @@ padding-bottom: 29px;
   background-size: cover;
   background-image: url(/assets/img/overlay.svg), linear-gradient(45deg, #303030 0%, #7b797c 100%);
   color: #fff;
-  padding: 5rem 0;}
+  padding: 5rem 0;
+  font-size: 1.2rem;}
 
   .product-image {
     box-shadow: 0 29px 32px -20px rgba(0,0,0,0.5);
