--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,6 @@
 .text-pad {
-  padding-bottom: 29px; }
+  padding-bottom: 29px;
+}
 
 .masthead {
   color: white;
@@ -8,16 +9,18 @@
   background-color: #1d1d1b;
   background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #272727 0%, #0000 100%);
   background-size: cover;
-  z-index: 0; }
-  .masthead .shape {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.034);
-    top: 0;
-    left: 0;
-    z-index: -1;
-    border-radius: 78% 22% 77% 23% / 29% 66% 34% 71%; }
+  z-index: 0;
+}
+.masthead .shape {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.034);
+  top: 0;
+  left: 0;
+  z-index: -1;
+  border-radius: 78% 22% 77% 23%/29% 66% 34% 71%;
+}
 
 .block2 {
   color: white;
@@ -26,10 +29,12 @@
   background-color: #1d1d1b;
   background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #272727 0%, #0000 100%);
   background-size: cover;
-  z-index: 0; }
+  z-index: 0;
+}
 
 .row {
-  margin: 15px; }
+  margin: 15px;
+}
 
 header {
   position: relative;
@@ -37,7 +42,8 @@ header {
   height: 75vh;
   min-height: 25rem;
   width: 100%;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 header video {
   position: absolute;
@@ -51,11 +57,13 @@ header video {
   -ms-transform: translateX(-50%) translateY(-50%);
   -moz-transform: translateX(-50%) translateY(-50%);
   -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%); }
+  transform: translateX(-50%) translateY(-50%);
+}
 
 header .container {
   position: relative;
-  z-index: 2; }
+  z-index: 2;
+}
 
 header .overlay {
   position: absolute;
@@ -65,42 +73,57 @@ header .overlay {
   width: 100%;
   background-color: black;
   opacity: 0.5;
-  z-index: 1; }
+  z-index: 1;
+}
 
 @media (pointer: coarse) and (hover: none) {
   header {
-    background: url("/public/images/video_home.mp4") black no-repeat center center scroll; }
+    background: url("/public/images/video_home.mp4") black no-repeat center center scroll;
+  }
 
   header video {
-    display: none; } }
+    display: none;
+  }
+}
 .jumbotron-home {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
   background-color: white;
-  border-radius: 0.3rem; }
+  border-radius: 0.3rem;
+}
 
 @media (min-width: 576px) {
   .jumbotron {
-    padding: 4rem 2rem; } }
+    padding: 4rem 2rem;
+  }
+}
 .row {
-  margin: 15px; }
+  margin: 15px;
+}
 
 @media (min-width: 360px) {
   .col-md-3 {
-    margin: 2rem 0rem; } }
+    margin: 2rem 0rem;
+  }
+}
 @media (min-width: 360px) {
   .font-weight-bold {
-    font-size: 45px; } }
+    font-size: 45px;
+  }
+}
 @media (min-width: 360px) {
   .navbar-collapse {
-    text-align: center; } }
+    text-align: center;
+  }
+}
 .mailchimp {
   background-color: #dd3d31;
   background-size: cover;
   background-image: url(/assets/img/overlay.svg), linear-gradient(45deg, #303030 0%, #7b797c 100%);
   color: #fff;
   padding: 5rem 0;
-  font-size: 1.2rem; }
+  font-size: 1.2rem;
+}
 
 .product-image {
   box-shadow: 0 29px 32px -20px rgba(0, 0, 0, 0.5);
@@ -108,7 +131,8 @@ header .overlay {
   position: relative;
   z-index: 2;
   overflow: hidden;
-  border-radius: 20px; }
+  border-radius: 20px;
+}
 
 /* Anchor will cover the whole item by default */
 /* For some effects it will show as a button */
@@ -117,22 +141,27 @@ header .overlay {
   text-indent: 200%;
   white-space: nowrap;
   font-size: 0;
-  opacity: 0; }
+  opacity: 0;
+}
 
 .grid figure h2 {
   word-spacing: -0.15em;
-  font-weight: 300; }
+  font-weight: 300;
+}
 
 .grid figure h2 span {
-  font-weight: 800; }
+  font-weight: 800;
+}
 
 .grid figure h2,
 .grid figure p {
-  margin: 0; }
+  margin: 0;
+}
 
 .grid figure p {
   letter-spacing: 1px;
-  font-size: 68.5%; }
+  font-size: 68.5%;
+}
 
 /* Individual effects */
 /*---------------*/
@@ -149,15 +178,18 @@ figure.effect-lily img {
   -webkit-transform: scale(1.15);
   transform: scale(1.15);
   box-shadow: 0 29px 32px -20px rgba(0, 0, 0, 0.5);
-  border-radius: 5%; }
+  border-radius: 5%;
+}
 
 figure.effect-lily:hover img,
 figure.effect-lily:hover p {
-  opacity: 1; }
+  opacity: 1;
+}
 
 figure.effect-lily:hover img {
   -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0); }
+  transform: translate3d(0, 0, 0);
+}
 
 figure.effect-ruby img {
   max-width: none;
@@ -170,11 +202,13 @@ figure.effect-ruby img {
   -webkit-transform: scale(1.15);
   transform: scale(1.15);
   box-shadow: 0 29px 32px -20px rgba(0, 0, 0, 0.5);
-  border-radius: 100%; }
+  border-radius: 100%;
+}
 
 figure.effect-ruby:hover img {
   opacity: 0.5;
   -webkit-transform: scale(1);
-  transform: scale(1); }
+  transform: scale(1);
+}
 
 /*# sourceMappingURL=custom.css.map */
