--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,5 @@
 .text-pad {
-  padding-bottom: 29px;
-}
+  padding-bottom: 29px; }
 
 .masthead {
   color: white;
@@ -9,18 +8,20 @@
   background-color: #1d1d1b;
   background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #272727 0%, #0000 100%);
   background-size: cover;
-  z-index: 0;
-}
-.masthead .shape {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.034);
-  top: 0;
-  left: 0;
-  z-index: -1;
-  border-radius: 78% 22% 77% 23%/29% 66% 34% 71%;
-}
+  z-index: 0; }
+  .masthead .shape {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.034);
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 78% 22% 77% 23% / 29% 66% 34% 71%; }
+
+.masthead .masthead-cards {
+  position: relative;
+  z-index: 1; }
 
 .block2 {
   color: white;
@@ -29,12 +30,10 @@
   background-color: #1d1d1b;
   background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #272727 0%, #0000 100%);
   background-size: cover;
-  z-index: 0;
-}
+  z-index: 0; }
 
 .row {
-  margin: 15px;
-}
+  margin: 15px; }
 
 header {
   position: relative;
@@ -42,8 +41,21 @@ header {
   height: 75vh;
   min-height: 25rem;
   width: 100%;
-  overflow: hidden;
-}
+  overflow: hidden; }
+
+.bg-image-full {
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover; }
+
+article {
+  background-color: black;
+  height: 75vh;
+  min-height: 25rem;
+  width: 100%;
+  overflow: hidden; }
 
 header video {
   position: absolute;
@@ -57,13 +69,11 @@ header video {
   -ms-transform: translateX(-50%) translateY(-50%);
   -moz-transform: translateX(-50%) translateY(-50%);
   -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-}
+  transform: translateX(-50%) translateY(-50%); }
 
 header .container {
   position: relative;
-  z-index: 2;
-}
+  z-index: 2; }
 
 header .overlay {
   position: absolute;
@@ -73,57 +83,42 @@ header .overlay {
   width: 100%;
   background-color: black;
   opacity: 0.5;
-  z-index: 1;
-}
+  z-index: 1; }
 
 @media (pointer: coarse) and (hover: none) {
   header {
-    background: url("/public/images/video_home.mp4") black no-repeat center center scroll;
-  }
+    background: url("/public/images/video_home.mp4") black no-repeat center center scroll; }
 
   header video {
-    background: url("/public/images/video_home.mp4") black no-repeat center center scroll;
-  }
-}
+    background: url("/public/images/video_home.mp4") black no-repeat center center scroll; } }
 .jumbotron-home {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
   background-color: white;
-  border-radius: 0.3rem;
-}
+  border-radius: 0.3rem; }
 
 @media (min-width: 576px) {
   .jumbotron {
-    padding: 4rem 2rem;
-  }
-}
+    padding: 4rem 2rem; } }
 .row {
-  margin: 15px;
-}
+  margin: 15px; }
 
 @media (min-width: 360px) {
   .col-md-3 {
-    margin: 2rem 0rem;
-  }
-}
+    margin: 2rem 0rem; } }
 @media (min-width: 360px) {
   .font-weight-bold {
-    font-size: 45px;
-  }
-}
+    font-size: 45px; } }
 @media (min-width: 360px) {
   .navbar-collapse {
-    text-align: center;
-  }
-}
+    text-align: center; } }
 .mailchimp {
   background-color: #dd3d31;
   background-size: cover;
   background-image: url(/assets/img/overlay.svg), linear-gradient(45deg, #303030 0%, #7b797c 100%);
   color: #fff;
   padding: 5rem 0;
-  font-size: 1.2rem;
-}
+  font-size: 1.2rem; }
 
 .product-image {
   box-shadow: 0 29px 32px -20px rgba(0, 0, 0, 0.5);
@@ -131,8 +126,7 @@ header .overlay {
   position: relative;
   z-index: 2;
   overflow: hidden;
-  border-radius: 20px;
-}
+  border-radius: 20px; }
 
 /* Anchor will cover the whole item by default */
 /* For some effects it will show as a button */
@@ -141,27 +135,22 @@ header .overlay {
   text-indent: 200%;
   white-space: nowrap;
   font-size: 0;
-  opacity: 0;
-}
+  opacity: 0; }
 
 .grid figure h2 {
   word-spacing: -0.15em;
-  font-weight: 300;
-}
+  font-weight: 300; }
 
 .grid figure h2 span {
-  font-weight: 800;
-}
+  font-weight: 800; }
 
 .grid figure h2,
 .grid figure p {
-  margin: 0;
-}
+  margin: 0; }
 
 .grid figure p {
   letter-spacing: 1px;
-  font-size: 68.5%;
-}
+  font-size: 68.5%; }
 
 /* Individual effects */
 /*---------------*/
@@ -169,11 +158,11 @@ header .overlay {
 /*---------------*/
 figure.effect-lily img {
   /*--------
-   margin-left: 30px;
-  max-width: none;
-  width: -webkit-calc(60% + 50px);
-  width: calc(60% + 10px);
-   padding: 10px 10px;-------*/
+  margin-left: 30px;
+	max-width: none;
+	width: -webkit-calc(60% + 50px);
+	width: calc(60% + 10px);
+  padding: 10px 10px;-------*/
   height: 350px;
   width: 350px;
   -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
@@ -181,22 +170,18 @@ figure.effect-lily img {
   -webkit-transform: scale(1.15);
   transform: scale(1.15);
   box-shadow: 0 29px 32px -20px rgba(0, 0, 0, 0.5);
-  border-radius: 5%;
-}
+  border-radius: 5%; }
 
 .texbox {
-  width: 1000px !important;
-}
+  width: 1000px !important; }
 
 figure.effect-lily:hover img,
 figure.effect-lily:hover p {
-  opacity: 1;
-}
+  opacity: 1; }
 
 figure.effect-lily:hover img {
   -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
+  transform: translate3d(0, 0, 0); }
 
 figure.effect-ruby img {
   max-width: none;
@@ -209,14 +194,12 @@ figure.effect-ruby img {
   -webkit-transform: scale(1.15);
   transform: scale(1.15);
   box-shadow: 0 29px 32px -20px rgba(0, 0, 0, 0.5);
-  border-radius: 100%;
-}
+  border-radius: 100%; }
 
 figure.effect-ruby:hover img {
   opacity: 0.5;
   -webkit-transform: scale(1);
-  transform: scale(1);
-}
+  transform: scale(1); }
 
 /* Responsive iFrame */
 .responsive-iframe-container {
@@ -224,8 +207,7 @@ figure.effect-ruby:hover img {
   padding-bottom: 56.25%;
   padding-top: 30px;
   height: 0;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 .responsive-iframe-container iframe,
 .vresponsive-iframe-container object,
@@ -234,20 +216,89 @@ figure.effect-ruby:hover img {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-}
+  height: 100%; }
 
 .Eventcont {
   color: white;
   padding: 0rem 0 7rem;
-  position: relative;
-}
+  position: relative; }
 
 .jumbotron-events {
   padding: 7rem 1rem;
   margin-bottom: -6rem;
   background-color: white;
-  border-radius: 0.3rem;
-}
+  border-radius: 0.3rem; }
+
+/*--------------------------------------------------------------
+# Intro Section
+--------------------------------------------------------------*/
+#intro {
+  width: 100%;
+  position: relative;
+  background-color: #1d1d1b;
+  background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #272727 0%, #0000 100%);
+  background-size: cover;
+  padding: 200px 0 120px 0; }
+
+#intro .intro-img {
+  width: 50%;
+  float: right; }
+
+#intro .intro-info {
+  width: 50%;
+  float: left; }
+
+#intro .intro-info h2 span {
+  color: #74b5fc;
+  text-decoration: underline; }
+
+#intro .intro-info .btn-get-started,
+#intro .intro-info .btn-services {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 0 20px 20px 0;
+  color: #fff; }
+
+#intro .intro-info .btn-get-started {
+  background: #007bff;
+  border: 2px solid #007bff;
+  color: #fff; }
+
+#intro .intro-info .btn-get-started:hover {
+  background: none;
+  border-color: #fff;
+  color: #fff; }
+
+#intro .intro-info .btn-services {
+  border: 2px solid #fff; }
+
+#intro .intro-info .btn-services:hover {
+  background: #007bff;
+  border-color: #007bff;
+  color: #fff; }
+
+@media (max-width: 991px) {
+  #intro {
+    padding: 140px 0 60px 0; }
+
+  #intro .intro-img {
+    width: 80%;
+    float: none;
+    margin: 0 auto 25px auto; }
+
+  #intro .intro-info {
+    width: 80%;
+    float: none;
+    margin: auto;
+    text-align: center; } }
+@media (max-width: 768px) {
+  .back-to-top {
+    bottom: 15px; } }
 
 /*# sourceMappingURL=custom.css.map */
