--- a/public/scss/custom.scss
+++ b/public/scss/custom.scss
@@ -29,7 +29,7 @@ padding-bottom: 29px;
 
 .block2{
   color: white;
-  padding: 7rem 0 7rem;
+  padding: 10rem 0 0rem;
   position: relative;
   background-color: #1d1d1b;
   background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #272727 0%, #0000 100%);
@@ -136,7 +136,7 @@ article {
   text-align: center; } 
  }
 
- .mailchimp {
+ .calltoaction {
   background-color: #dd3d31;
   background-size: cover;
   background-image: url(/assets/img/overlay.svg), linear-gradient(45deg, #303030 0%, #7b797c 100%);
@@ -287,7 +287,7 @@ border-radius: 0.3rem;
   background-color: #1d1d1b;
 background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #272727 0%, #0000 100%);
   background-size: cover;
-  padding: 200px 0 120px 0;
+  padding: 120px 0 120px 0;
 }
 
 #intro .intro-img {
@@ -369,3 +369,19 @@ background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #2727
   }
 }
 
+responsive-iframe-container .agenda .date-label {
+  font-weight: bold;
+  background: black!important;
+  position: relative;
+}
+
+
+responsive-iframe-container .view-container-border {
+
+  clear: right;
+  padding: 0 8px;
+  position: relative;
+  zoom: 1;
+  background: black!important;
+
+}
