--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -9948,6 +9948,7 @@ figure.effect-ruby:hover img {
 #intro .intro-info {
   width: 50%;
   float: left;
+  margin-top: 120px;
 }
 
 #intro .intro-info h2 span {
