--- a/public/scss/custom.scss
+++ b/public/scss/custom.scss
@@ -298,6 +298,7 @@ background-image: url(/public/images/bk-home.jpg), linear-gradient(-10deg, #2727
 #intro .intro-info {
   width: 50%;
   float: left;
+  margin-top: 120px;
 }
 
 #intro .intro-info h2 span {
