--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -372,4 +372,19 @@ responsive-iframe-container .view-container-border {
   background: black !important;
 }
 
+.map-container {
+  overflow: hidden;
+  margin-bottom: 70px;
+  position: relative;
+  height: 0;
+}
+
+.map-container iframe {
+  left: 0;
+  top: 0;
+  height: 300px;
+  width: 100%;
+  position: absolute;
+}
+
 /*# sourceMappingURL=custom.css.map */
