--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -9764,8 +9764,8 @@ header .overlay {
   }
 }
 .jumbotron-home {
-  padding: 2rem 1rem;
-  margin-bottom: 2rem;
+  padding: 1rem 1rem;
+  margin-bottom: 1rem;
   background-color: white;
   border-radius: 0.3rem;
 }
@@ -10042,6 +10042,114 @@ responsive-iframe-container .view-container-border {
   height: 300px;
   width: 100%;
   position: absolute;
+}
+
+.gallery-block.grid-gallery {
+  padding-bottom: 60px;
+  padding-top: 0px;
+}
+
+.gallery-block.grid-gallery .heading {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.gallery-block.grid-gallery .heading h2 {
+  font-weight: bold;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+}
+
+.gallery-block.grid-gallery a:hover {
+  opacity: 0.8;
+}
+
+.gallery-block.grid-gallery .item img {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+  transition: 0.4s;
+}
+
+.gallery-block.grid-gallery .item {
+  margin-bottom: 20px;
+}
+
+@media (min-width: 576px) {
+  .gallery-block.grid-gallery .scale-on-hover:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15) !important;
+  }
+}
+.player {
+  z-index: 2;
+  float: left;
+  width: 50px;
+  height: 50px;
+  background: white;
+  -moz-border-radius: 50px;
+  -webkit-border-radius: 50px;
+  border-radius: 50px/50px;
+  border: solid 5px blue;
+  text-align: center;
+  line-height: 50px;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.player.defense {
+  border: double 5px red;
+}
+
+.ball {
+  float: left;
+  width: 40px;
+  height: 40px;
+  -moz-border-radius: 40px;
+  -webkit-border-radius: 40px;
+  border-radius: 40px/40px;
+  border: solid 3px black;
+  background: yellow;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.goal {
+  position: relative;
+  width: 225px;
+  height: 50px;
+  background: white;
+  border: dotted 2px black;
+  margin: 0 auto;
+}
+
+.pool {
+  height: 450px;
+  margin: 10px;
+  width: 950px;
+  background: aqua;
+  border: solid 5px black;
+}
+
+#canvas-wrap {
+  position: relative;
+  width: 950px;
+  height: 450px;
+}
+
+#canvas-wrap canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.formation {
+  display: inline;
+}
+
+.whiteboard {
+  padding-top: 110px;
 }
 
 /*# sourceMappingURL=bootstrap.css.map */
